Fix layout bugs

--- a/static/css/stalruth.css
+++ b/static/css/stalruth.css
@@ -6,6 +6,7 @@
 
 a {
   text-decoration: underline;
+  display: inline;
 }
 
 blockquote {
